--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     }
   ],
   "require": {
-    "laravel/framework": ">=8.0",
-    "laravel/jetstream": "^1.6"
+    "laravel/framework": ">=8.0"
   },
   "require-dev": {
     "phpunit/phpunit" : "^7.3",
