--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "description": "Get User Data with the result code of a apple sign in button",
   "version": "1.0.2",
-  "minimum-stability": "dev-main",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "keywords": [
     "apple-laravel-authorization-code","sign in apple","apple","laravel","apple jwt","create jwt apple php","jwt php"
